# teleop-ur3

./: .gitignore  LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
scenes/: ur3.ttt
scripts/: bringup.sh
src/ur3e_haptic_scene/: package.xml  setup.cfg  setup.py
src/ur3e_haptic_scene/config/: obstacles.yaml
src/ur3e_haptic_scene/launch/: my_ur3e_gazebo.launch.py
src/ur3e_haptic_scene/ur3e_haptic_scene/scripts/: add_obstacles.py  target_selector.py  virtual_force_node.py
src/ur3e_haptic_scene/worlds/: my_ur3e_world.sdf
src/ur3e_teleop_bringup/: CMakeLists.txt  package.xml
src/ur3e_teleop_bringup/config/: staging_pose.yaml  ur3e_servo_cartesian.yaml  ur3e_servo_joint.yaml  ur3e_servo_kinematics.yaml
src/ur3e_teleop_bringup/launch/: check_setup.launch.py  ur3e_cartesian_teleop.launch.py  ur3e_joint_teleop.launch.py  ur3e_servo_only.launch.py  ur3e_sim_moveit_custom_world.launch.py  ur3e_world_moveit_teleop.launch.py  ur3e_world_moveit_teleop_apf.launch.py  ur3e_world_moveit_virtuose.launch.py  ur3e_world_moveit_virtuose_apf_force.launch.py
src/ur3e_teleop_bringup/scripts/: staging_pose_executor.py
src/ur3e_teleop_joy/: package.xml  setup.cfg  setup.py
src/ur3e_teleop_joy/ur3e_teleop_joy/: cartesian_teleop_improved.py  joint_teleop_improved.py
src/ur3e_virtuose_bridge/: package.xml  setup.cfg  setup.py
src/ur3e_virtuose_bridge/config/: virtuose_bridge.yaml  virtuose_force_bridge.yaml
src/ur3e_virtuose_bridge/ur3e_virtuose_bridge/: virtuose_bridge.py  virtuose_force_bridge.py
ur3_bridge/: bridge_node.py  gamepad_to_ur3_cmd.py
