<?xml version="1.0"?>
<package format="3">
  <name>ur3e_teleop_joy</name>
  <version>0.0.1</version>
  <description>Joy-based teleoperation nodes for UR3e.</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
